# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2084 2011/12/09 17:54:47 cg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.beta3 2011-12-??
 - 2011-12-09 Fixed bug#7014 - Inline article gets bigger than Ticket::Frontend::HTMLArticleHeightMax.
 - 2011-12-09 Removed compatibility modules AgentTicketMailbox and CustomerZoom
    (these only performed redirects to newer screens).
 - 2011-12-09 Fixed bug#7997 - POP3 does not work anymore.
 - 2011-12-09 Fixed bug#7991 - Locale::Codes is not bundled in 3.1.0beta2 tarball, breaking Customer Cumpany
    screen.
 - 2011-12-09 Fixed bug#7995 - Previous owner is missing in AgentTicketMove.
 - 2011-12-09 Updated Japanese Translation, thanks to Kaoru Hayama!
 - 2011-12-08 A bug related to oracle made database updates necessary when upgrading from beta1 or beta2.
    Please see the UPGRADING file for details.
 - 2011-12-07 Fixed bug#7959 - Problem when entering a customer in the autocomplete field in AgentTicketPhone.
 - 2011-12-07 Fixed bug#7976 - Add Event Trigger Asynchronous not correctly displayed in Event Triggers Table.
 - 2011-12-06 Fixed bug#7981 - Stats sum on X axis does not display total if the total is zero.
 - 2011-12-06 Fixed bug#4740 - HTTP header in Redirect is not syntactically correct.
 - 2011-12-06 Fixed bug#5253 - User preferences are updated when displaying an overview.
 - 2011-12-05 Fixed bug#5356 - TicketFreeText (now Dynamic Fields) containing domain name - causes
    Agent interface issues
 - 2011-12-05 Fixed bug#3334 - FreeFields (now Dynamic Fields) with content "0" aren't displayed
    within TicketZoom view
 - 2011-12-05 Fixed bug#4032 - TicketFreeText (now Dynamic Fields)- DefaultSelection does not work
    for AgentTicketForward