@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2084 2011/12/09 17:54:47 cg Exp $
+# $Id: CHANGES,v 1.2085 2011/12/12 11:15:33 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 3.1.0.beta3 2011-12-??
+ - 2011-12-12 Changed the default behaviour of TicketGet() and ArticleGet() to NOT return the
+    dynamic field values for performance reasons. If you need them, pass DynamicFields => 1.
  - 2011-12-09 Fixed bug#7014 - Inline article gets bigger than Ticket::Frontend::HTMLArticleHeightMax.
  - 2011-12-09 Removed compatibility modules AgentTicketMailbox and CustomerZoom
     (these only performed redirects to newer screens).
